<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">信用卡移动销售</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_about">关于</string>
    <string name="login">签到</string>
    <string name="logout">签退</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_edition">版本</string>
    <string name="title_activity_terminal_setting">终端参数设置</string>
    <string name="title_activity_conn_setting">通讯参数设置</string>
    <string name="title_activity_key_man">密钥管理</string>
    <string name="title_activity_gprs_setting">GPRS设置</string>
    <string name="title_activity_tcp_setting">TCP/IP设置</string>
    <string name="title_activity_splash">信用卡移动销售</string>
    <string name="sp_hint">请选择</string>
    <string name="exit">退出</string>
    <string name="back">返回</string>
    <string name="pswd">密码：  </string>
    <string name="userid">身份证号：</string>
    <string name="pswd_hint">输入密码</string>
    <string name="userid_hint">请读二代证或输入</string>
    <string name="tern_set">终端设置</string>
    <string name="tern_id">终端编号</string>
    <string name="date_set">设置日期</string>
    <string name="time_set">设置时间</string>
    <string name="flowid_set">流水号</string>
    <string name="flowid_set_dialog">修改流水号</string>
    <string name="overtime_set">交易超时时间</string>
    <string name="recalltime_set">交易重拨次数</string>
    <string name="readcardtype_set">身份证读卡器</string>
    <string name="readcardtype_set_dialog">身份证读卡器类型</string>
    <string name="net_set">按需要选择以下连接方式</string>
    <string name="netchoice_set_dialog">首选网络方式</string>
    <string name="gprs_set">GPRS设置</string>
    <string name="tcp_set">TCP/IP设置</string>
    <string name="ip_set">IP地址</string>
    <string name="port_set">端口号</string>
    <string name="key_set">密钥管理</string>
    <string name="manual_set">手动输入</string>
    <string name="title_activity_task_home">业务</string>
    <string name="title_activity_login_choice">选择签到主体</string>
    <string name="title_activity_op_login">柜员签到</string>
    <string name="title_activity_enter">EnterActivity</string>
    <string name="title_activity_msg_manage">MsgManageActivity</string>
    <string name="title_activity_process">进度查询</string>
    <string name="title_activity_pswd_change">修改密码</string>
    <string name="title_activity_msg_search">申请信息列表</string>
    <string name="title_activity_sale">营销活动</string>
    <string name="title_activity_card_active">知识库</string>
    <string name="title_activity_print">提交与打印</string>
    <string name="title_activity_setting1">Setting1Activity</string>
    <string name="tern_id_value">00000000</string>
    <string name="flowid_value">123456</string>
    <string name="overtime_value">20</string>
    <string name="recalltime_value">3</string>
    <string name="readcardtype_value">肯麦思</string>
    <string name="tcp_ip_value">192.168.1.15</string>
    <string name="tcp_port_value">10001</string>
    <string name="version">20130101</string>
    <string name="title_activity_download">下载更新</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_card_choose">CardChooseActivity</string>
    <string name="title_activity_main">Items</string>
    <string name="title_activity_card0">Card0Activity</string>
    <string name="title_activity_card_detail">CardDetailActivity</string>
    <string name="title_activity_agree_ment">AgreeMentActivity</string>
    <string name="login_pswd_digits">abcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="pyname_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="login_username_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="money_digits">0123456789</string>
    <string name="title_activity_test1">Test1Activity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_zc">ZCActivity</string>
    <string name="title_activity_delete">DeleteActivity</string>
    <string name="title_activity_pre_eva">PreEvaActivity</string>

</resources>